--- a/public/styles.css
+++ b/public/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 .container {
-    max-width: 600px;
+    max-width: 800px;
     margin: 50px auto;
     padding: 20px;
     background-color: #fff;
@@ -99,4 +99,30 @@ button:hover {
 
 #metamask-status {
     margin-top: 10px;
+}
+
+#logout-button {
+    background-color: blue;
+    /* Color of the button */
+    color: white;
+    /* Text color inside the button */
+    padding: 10px 20px;
+    /* Space inside the button */
+    border: none;
+    /* Remove any default borders */
+    border-radius: 5px;
+    /* Rounded corners */
+    cursor: pointer;
+    /* Mouse cursor changes to a hand when hovered over the button */
+    position: absolute;
+    /* Absolute positioning */
+    top: 10px;
+    /* Distance from the top of its containing element */
+    right: 10px;
+    /* Distance from the right side of its containing element */
+}
+
+#logout-button:hover {
+    background-color: darkblue;
+    /* Slightly darker blue when hovered over for interactivity */
 }
